--- a/src/components/neo-header/energetic-theme.scss
+++ b/src/components/neo-header/energetic-theme.scss
@@ -1,48 +1,51 @@
 .neo-header {
-  height: 0.63rem;
+  height: 8.29%;
   width: 3.75rem;
 }
 
-.neo-header-energetic {
+.neo-header > .energetic {
   position: relative;
   display: flex;
-  justify-content: center;
+  flex-flow: row;
+  justify-content: space-between;
   align-items: center;
 
-  ::before, ::after {
-    content: '';
-    display: block;
+  & .neo-header-left-element {
     width: .68rem;
     height: .53rem;
-    position: absolute;
-    top: .03rem
-  }
-
-  ::before {
-    left: 0.03rem;
+    position: relative;
     background: url("../../common/assets/energetic/header/title-left.png") no-repeat center;
     background-size: contain;
   }
 
-  ::after {
-    right: 0.03rem;
+  & .neo-header-right-element {
+    width: .68rem;
+    height: .53rem;
+    position: relative;
     background: url("../../common/assets/energetic/header/title-right.png") no-repeat center;
     background-size: contain;
   }
 
-  & .neo-header-main-element-energetic {
+  & .neo-header-main-element {
+    height: 100%;
+    width: 2.23rem;
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    align-items: center;
+
     & .title {
-      margin: 0 auto;
-      width: 2.34rem;
-      height: .42rem;
+      margin: 0 auto .02rem;
+      width: 2.23rem;
+      height: .37rem;
       background: url("../../common/assets/energetic/header/title.png") no-repeat center;
       background-size: contain;
     }
 
     & .subtitle {
       margin: 0 auto;
-      width: 2.28rem;
-      height: .15rem;
+      width: 2.21rem;
+      height: .12rem;
       background: url("../../common/assets/energetic/header/subtitle.png") no-repeat center;
       background-size: contain;
     }
