--- a/src/common/stylesheets/base.scss
+++ b/src/common/stylesheets/base.scss
@@ -32,7 +32,7 @@ div {
     content: '';
     box-sizing: border-box;
     transform-origin: 0 0;
-    border: 0 solid rgba(22, 24, 35, 0.12);
+    border: 0 solid rgba(255, 255,255, 1);
     left: 0;
     top: 0;
     width: 100%;
