--- a/src/components/neo-player-controller/energetic-theme.scss
+++ b/src/components/neo-player-controller/energetic-theme.scss
@@ -8,10 +8,16 @@
 .neo-player-controller > .energetic {
   width: 100%;
   height: 100%;
-  border: 2px solid white;
 
   .neo-player-controller {
     width: 100%;
     height: 100%;
+    display: flex;
+    justify-content: space-between;
+
+    & > div {
+      width: .93rem;
+      height: 100%;
+    }
   }
 }
