feat: 主功能全部完成

--- a/src/components/neo-player-controller/energetic-theme.scss
+++ b/src/components/neo-player-controller/energetic-theme.scss
@@ -18,6 +18,9 @@
     & > div {
       width: .93rem;
       height: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
   }
 }
