--- a/src/components/neo-player-controller/energetic-theme.scss
+++ b/src/components/neo-player-controller/energetic-theme.scss
@@ -5,24 +5,6 @@
   margin-top: 0.33%;
 }
 
-input[type=range]{
-  -webkit-appearance: none;
-  width: 300px;
-  border-radius: 10px;
-}
-
-.range-cover [type=range] {
-  margin: -5px 0 0;
-  padding: 0;
-  width: calc(100% + 32px);
-  height: 60px;
-  position: absolute;
-  left: -16px;
-  opacity: 0;
-  top: -12px;
-  cursor: pointer;
-}
-
 .neo-player-controller > .energetic {
   width: 100%;
   height: 100%;
@@ -44,15 +26,32 @@ input[type=range]{
     & .neo-tempo-btn {
       position: relative;
       background: url("../../common/assets/energetic/player-controller/tempo-icon.png") no-repeat center;
-      background-size: .27rem .27rem;
+      background-size: .2rem .24rem;
 
       & .tempo-container {
         position: absolute;
-        background-color: royalblue;
-        height: 2rem;
-        width: .5rem;
-        left: .2325rem;
-        top: -2rem;
+        background-color: #fb4963;
+        border-radius: .06rem;
+        border: solid .02rem #ffffff;
+        height: 1.64rem;
+        width: .31rem;
+        left: 50%;
+        transform: translateX(-50%);
+        bottom: .05rem;
+
+        & .tempo-range {
+          height: 1.2rem;
+          width: .27rem;
+        }
+
+        & .inside-tempo {
+          width: .27rem;
+          height: .31rem;
+          position: absolute;
+          bottom: 0.075rem;
+          background: url("../../common/assets/energetic/player-controller/tempo-icon.png") no-repeat center;
+          background-size: .2rem .24rem;
+        }
       }
     }
 
@@ -68,27 +67,27 @@ input[type=range]{
 
     & .neo-instrument-selection-btn-marimba {
       background: url("../../common/assets/energetic/player-controller/marimba-icon.png") no-repeat center;
-      background-size: .27rem .27rem;
+      background-size: .26rem .28rem;
     }
 
     & .neo-instrument-selection-btn-piano {
       background: url("../../common/assets/energetic/player-controller/piano-icon.png") no-repeat center;
-      background-size: .27rem .27rem;
+      background-size: .26rem .28rem;
     }
 
     & .neo-instrument-selection-btn-wood {
       background: url("../../common/assets/energetic/player-controller/wood-icon.png") no-repeat center;
-      background-size: .27rem .27rem;
+      background-size: .26rem .26rem;
     }
 
     & .neo-instrument-selection-btn-string {
       background: url("../../common/assets/energetic/player-controller/string-icon.png") no-repeat center;
-      background-size: .27rem .27rem;
+      background-size: .26rem .26rem;
     }
 
     & .neo-instrument-selection-btn-synthesizer {
       background: url("../../common/assets/energetic/player-controller/synthesizer-icon.png") no-repeat center;
-      background-size: .27rem .27rem;
+      background-size: .26rem .17rem;
     }
 
     & .neo-restart-btn {
