--- a/src/components/neo-player-controller/energetic-theme.scss
+++ b/src/components/neo-player-controller/energetic-theme.scss
@@ -42,6 +42,7 @@
         & .tempo-range {
           height: 1.2rem;
           width: .27rem;
+          position: relative;
         }
 
         & .inside-tempo {
