--- a/src/App.scss
+++ b/src/App.scss
@@ -2,3 +2,14 @@ body {
   overflow: hidden;
 }
 
+.bounce-disabled-container-loading::before {
+  content: '';
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(17,19,67,.8);
+  z-index: 10000000;
+}
