--- a/src/pages/Maker/index.scss
+++ b/src/pages/Maker/index.scss
@@ -10,3 +10,14 @@
 .neo-energetic {
   background-color: #fb4963;
 }
+
+.teaching {
+  position: absolute;
+  overflow: hidden;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(17,19,67,.8);
+  z-index: 10000000;
+}
