feat: dark color

--- a/src/components/neo-drum-section/energetic-theme.scss
+++ b/src/components/neo-drum-section/energetic-theme.scss
@@ -8,7 +8,7 @@
 .neo-drum-section > .energetic {
   height: 100%;
   width: 100%;
-  background: white;
+  background: transparent;
 
   & .neo-drum-section-main-element {
     height: 100%;
