--- a/src/components/neo-rhythm-section/energetic-theme.scss
+++ b/src/components/neo-rhythm-section/energetic-theme.scss
@@ -10,7 +10,7 @@
   flex-flow: row;
   justify-content: space-between;
   align-items: center;
-  background: white;
+  background: transparent;
 
   & .neo-rhythm-section-left-element {
     width: .28rem;
