--- a/src/components/neo-player-controller/energetic-theme.scss
+++ b/src/components/neo-player-controller/energetic-theme.scss
@@ -35,9 +35,9 @@
       .tempo-container-show {
         animation: show .2s ease-in forwards;
         position: absolute;
-        background-color: #fb4963;
+        background-color: #00B01A;
         border-radius: .06rem;
-        border: solid .02rem #ffffff;
+        border: solid .02rem #FFC7EC;
         height: 1.64rem;
         width: .31rem;
         left: 50%;
@@ -66,9 +66,9 @@
       .tempo-container-hide {
         animation: hide .2s ease-out forwards;
         position: absolute;
-        background-color: #fb4963;
+        background-color: #00B01A;
         border-radius: .06rem;
-        border: solid .02rem #ffffff;
+        border: solid .02rem #FFC7EC;
         height: 1.64rem;
         width: .31rem;
         left: 50%;
