--- a/src/pages/TextEditor/index.scss
+++ b/src/pages/TextEditor/index.scss
@@ -188,6 +188,7 @@
     & .tool-container {
       width: 3.71rem;
       height: .9rem;
+      margin-bottom: .07rem;
 
       & .change-btn {
         width: 3.71rem;
