--- a/src/App.scss
+++ b/src/App.scss
@@ -16,7 +16,7 @@ body {
 }
 
 .loading-animated .loading-item {
-  animation: linear .4s hide-loading;
+  animation: linear .4s hide-loading forwards;
   content: '';
   display: block;
   position: absolute;
