--- a/src/common/stylesheets/base.scss
+++ b/src/common/stylesheets/base.scss
@@ -32,7 +32,7 @@ div {
     content: '';
     box-sizing: border-box;
     transform-origin: 0 0;
-    border: 0 solid #FFC7EC;
+    border: 0 solid #FFFFFF;
     left: 0;
     top: 0;
     width: 100%;
